2.67b & 2.68 crashes at the first click-and-drug paint brush stroke -2.66 doesn't #36225

Closed
opened 2013-07-19 20:28:19 +02:00 by G M · 9 comments

%%%--- Operating System, Graphics card ---
Windows 7 Home Premium x64 SP1
Nvidia GTX-560 Ti

- Blender version with error, and version that worked ---

2.67b & 2.68. I even disabled all addons to no avail.
2.66 works but I haven't imported the previous settings -in case that matters.

- Short description of error ---

I start Blender, open the last project which is a rigged mesh with armature modifiers etc.
Then I enter Weight paint mode. Now if I just click the brush with the mouse, it works.
But if I click AND drug, it crashes!

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

I tried to reproduce the error with other files and I can't.
I have attached a "crash report" the copy of console window, after restarting Blender with -w -d.

%%%

%%%--- Operating System, Graphics card --- Windows 7 Home Premium x64 SP1 Nvidia GTX-560 Ti - Blender version with error, and version that worked --- 2.67b & 2.68. I even disabled all addons to no avail. 2.66 works but I haven't imported the previous settings -in case that matters. - Short description of error --- I start Blender, open the last project which is a rigged mesh with armature modifiers etc. Then I enter Weight paint mode. Now if I just click the brush with the mouse, it works. But if I click AND drug, it crashes! - Steps for others to reproduce the error (preferably based on attached .blend file) --- I tried to reproduce the error with other files and I can't. I have attached a "crash report" the copy of console window, after restarting Blender with -w -d. %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Please attach the blend file, if you can't redo the error, its unlikely we can without your file.

In this case the crash-report.txt isn't really helpful.

I've tried click+dragging on all brush icons in blender when in wightpaint+pose mode, but can't redo the crash.%%%

%%%Please attach the blend file, if you can't redo the error, its unlikely we can without your file. In this case the crash-report.txt isn't really helpful. I've tried click+dragging on all brush icons in blender when in wightpaint+pose mode, but can't redo the crash.%%%
Author

%%%Hi, I removed bones, modifiers and left only a small part of the mesh and it still crashes.
So I'm attaching the blend file. Just left-click AND drug on the mesh with the paint brush to make it crash.

The tracker rises an error when I attached the file (770kb), so download it from http://www.pasteall.org/blend/22920%%%

%%%Hi, I removed bones, modifiers and left only a small part of the mesh and it still crashes. So I'm attaching the blend file. Just left-click AND drug on the mesh with the paint brush to make it crash. The tracker rises an error when I attached the file (770kb), so download it from http://www.pasteall.org/blend/22920%%%
Author

%%%I see now that as it accepted the text "follow-up" it accepted my previous attempts for attachment too. There is some weird bug on the page code.%%%

%%%I see now that as it accepted the text "follow-up" it accepted my previous attempts for attachment too. There is some weird bug on the page code.%%%

%%%Seems that if this object is appended to a fresh scene, it can be weight painted normally.%%%

%%%Seems that if this object is appended to a fresh scene, it can be weight painted normally.%%%

%%%The issue is the brush spacing is zero, Psy-Fi, are you aware how versioning should be working here? *(we could always set in readfile.c)%%%

%%%The issue is the brush spacing is zero, Psy-Fi, are you aware how versioning should be working here? *(we could always set in readfile.c)%%%

%%%This must related to own changes to spacing with texture painting. I did a versioning patch for 2.67 that set the spacing to half for texture painting brushes because spacing behaviour was calculated relative to radius there. Looks like this brush is shared with texture painting (3 users) and had its spacing halfed and set to zero after 2.67. Since the file has been saved already, I guess we could do one of two things:

  1. Write a version patch that checks for spacing = max (1.0, spacing)
  2. Enforce spacing to be at least 1.0 in paint_space_stroke_spacing

Given that spacing should always be 1.0 I think it is safe to write a version patch. Of course correcting in the file reading/space stroke code instead of versioning patch should solve for all possible future mishaps.

The funny thing is that by simply opening the spacing panel, the spacing variable RNA code kicks in and corrects the result to 1.0.%%%

%%%This must related to own changes to spacing with texture painting. I did a versioning patch for 2.67 that set the spacing to half for texture painting brushes because spacing behaviour was calculated relative to radius there. Looks like this brush is shared with texture painting (3 users) and had its spacing halfed and set to zero after 2.67. Since the file has been saved already, I guess we could do one of two things: 1) Write a version patch that checks for spacing = max (1.0, spacing) 2) Enforce spacing to be at least 1.0 in paint_space_stroke_spacing Given that spacing should always be 1.0 I think it is safe to write a version patch. Of course correcting in the file reading/space stroke code instead of versioning patch should solve for all possible future mishaps. The funny thing is that by simply opening the spacing panel, the spacing variable RNA code kicks in and corrects the result to 1.0.%%%

%%%Added a version patch, should be fixed in 58539%%%

%%%Added a version patch, should be fixed in 58539%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#36225
No description provided.