Fix #36225, spacing was halved and set to zero for texture paint brushes that had spacing of 1. Related to own changes to maintain spacing consistent between 2.67-2.66.